corrected button spacing, changed colors, added styling to elements created with JS

--- a/style.css
+++ b/style.css
@@ -1,15 +1,10 @@
-* {
-    margin: 50px;
-    background-color: rgb(176, 179, 181);
-    text-align: center;
-}
-
 .container {
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 80rem;
     margin: 0 auto;
 }
 
@@ -22,7 +17,8 @@ button {
     text-align: center;
     font-size: 20px;
     padding: 20px;
-    width: 150px;
+    width: 300px;
+    margin-top: 5px;
 }
 
 button:hover {
@@ -59,6 +55,11 @@ button:hover {
     align-items: center;
 }
 
+#highscore {
+    height: 1rem;
+    border: groove 2px;
+}
+
 #highscorepage {
     display: none;
     width: 50%;
@@ -74,7 +75,7 @@ button:hover {
     justify-content: space-around;
     border-bottom-style: outset;
     margin-bottom: .5rem;
-    background-color: #5e6df1;
+    background-color: rgb(99, 181, 99);
     color: #eeeeee;
     font-family: sans-serif;
 }
@@ -88,14 +89,19 @@ button:hover {
     justify-content: center;
 }
 
-#highscoreinitials {
+#initials {
+    margin: 1rem;
+    height: 1rem;
+}
+
+#highscore-initials {
     display: inline-block;
     padding-left: 9.5rem;
     font-family: sans-serif;
     font-weight: bold;
 }
 
-#highscorescore {
+#highscore-score {
     float: right;
     padding-right: 8.75rem;
     font-family: sans-serif;
@@ -112,3 +118,24 @@ button:hover {
 #gameoverbuttons {
     display: none;
 }
+
+li {
+    padding-bottom: 3px;
+    color: white;
+    text-shadow: 1.5px 1px 3px black;
+    list-style-type: none;
+}
+
+p {
+    color: black;
+    text-shadow: .5px .5px white;
+    text-align: center;
+    font-size: xx-large;
+    font-family: sans-serif;
+
+}
+
+input {
+    text-align: center;
+}
+
